Second Year/COMP2212 - Programming Language Concepts/plc-coursework-main/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Grammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseQuery -> Query                         (0)
	Query -> FindClause FromClause ReturnClause        (1)
	Query -> FindClause FromClause WhereClause ReturnClause   (2)
	Query -> FindClause FromClause CreateClause ReturnClause   (3)
	Query -> FindClause FromClause WhereClause CreateClause ReturnClause   (4)
	Query -> FindClause FromClause UpdateClause        (5)
	Query -> FindClause FromClause UpdateClause ReturnClause   (6)
	Query -> FindClause FromClause DeleteClause ReturnClause   (7)
	FindClause -> FIND IdentifierList                  (8)
	FindClause -> FIND IdentifierList RelationshipList   (9)
	FindClause -> FIND RelationshipList                (10)
	FromClause -> FROM STRING                          (11)
	ReturnClause -> RETURN ReturnElements              (12)
	WhereClause -> WHERE Condition                     (13)
	CreateClause -> CREATE RelationshipPattern         (14)
	UpdateClause -> UPDATE IdentifierPattern           (15)
	DeleteClause -> DELETE RelationshipPattern         (16)
	IdentifierList -> IdentifierPattern                (17)
	IdentifierList -> IdentifierPattern ',' IdentifierList   (18)
	IdentifierPattern -> IDENT                         (19)
	IdentifierPattern -> '(' IDENT ')'                 (20)
	IdentifierPattern -> '(' IDENT ':' Labels ')'      (21)
	IdentifierPattern -> '(' IDENT ':' Labels PropertyList ')'   (22)
	IdentifierPattern -> '(' IDENT PropertyList ')'    (23)
	Labels -> Label                                    (24)
	Labels -> Label ':' Labels                         (25)
	RelationshipList -> RelationshipPattern            (26)
	RelationshipList -> RelationshipPattern ',' RelationshipList   (27)
	RelationshipPattern -> IdentifierPattern '-' '[' IDENT ':' Type PropertyList ']' '-' '>' IdentifierPattern   (28)
	RelationshipPattern -> IdentifierPattern '-' '[' IDENT ':' Type ']' '-' '>' IdentifierPattern   (29)
	RelationshipPattern -> IdentifierPattern '-' '[' ':' Type ']' '-' '>' IdentifierPattern   (30)
	RelationshipPattern -> IdentifierPattern '-' '[' IDENT PropertyList ']' '-' '>' IdentifierPattern   (31)
	RelationshipPattern -> IdentifierPattern '-' '[' IDENT ']' '-' '>' IdentifierPattern   (32)
	RelationshipPattern -> IdentifierPattern '-' '[' PropertyList ']' '-' '>' IdentifierPattern   (33)
	RelationshipPattern -> IdentifierPattern '<' '-' '[' IDENT ':' Type PropertyList ']' '-' IdentifierPattern   (34)
	RelationshipPattern -> IdentifierPattern '<' '-' '[' IDENT ':' Type ']' '-' IdentifierPattern   (35)
	RelationshipPattern -> IdentifierPattern '<' '-' '[' ':' Type ']' '-' IdentifierPattern   (36)
	RelationshipPattern -> IdentifierPattern '<' '-' '[' IDENT PropertyList ']' '-' IdentifierPattern   (37)
	RelationshipPattern -> IdentifierPattern '<' '-' '[' IDENT ']' '-' IdentifierPattern   (38)
	RelationshipPattern -> IdentifierPattern '<' '-' '[' PropertyList ']' '-' IdentifierPattern   (39)
	RelationshipPattern -> IdentifierPattern '-' '[' IDENT ':' Type PropertyList ']' '-' IdentifierPattern   (40)
	RelationshipPattern -> IdentifierPattern '-' '[' IDENT ':' Type ']' '-' IdentifierPattern   (41)
	RelationshipPattern -> IdentifierPattern '-' '[' ':' Type ']' '-' IdentifierPattern   (42)
	RelationshipPattern -> IdentifierPattern '-' '[' IDENT PropertyList ']' '-' IdentifierPattern   (43)
	RelationshipPattern -> IdentifierPattern '-' '[' IDENT ']' '-' IdentifierPattern   (44)
	RelationshipPattern -> IdentifierPattern '-' '[' PropertyList ']' '-' IdentifierPattern   (45)
	PropertyList -> '{' Properties '}'                 (46)
	Properties -> Property                             (47)
	Properties -> Property ',' Properties              (48)
	Property -> Name ':' Value                         (49)
	Name -> IDENT                                      (50)
	Type -> IDENT                                      (51)
	Label -> IDENT                                     (52)
	ValueList -> Value                                 (53)
	ValueList -> Value ',' ValueList                   (54)
	Value -> STRING                                    (55)
	Value -> INTEGER                                   (56)
	Value -> IDENT                                     (57)
	Value -> '[' ValueList ']'                         (58)
	Condition -> Comparison                            (59)
	Condition -> Condition AND Condition               (60)
	Condition -> Condition OR Condition                (61)
	Condition -> IdentifierPattern                     (62)
	Condition -> IdentifierPattern '.' IDENT Comparison   (63)
	Condition -> NOT '(' RelationshipPattern ')'       (64)
	Comparison -> '=' Value                            (65)
	Comparison -> STARTS_WITH STRING                   (66)
	Comparison -> '<' Value                            (67)
	Comparison -> '>' Value                            (68)
	Comparison -> '<=' Value                           (69)
	Comparison -> '>=' Value                           (70)
	ReturnElements -> ReturnElement                    (71)
	ReturnElements -> ReturnElement ',' ReturnElements   (72)
	ReturnElement -> IDENT                             (73)
	ReturnElement -> IDENT '.' IDENT                   (74)
	ReturnElement -> IDENT '.' IDENT AS IDENT          (75)
	ReturnElement -> RelationshipPattern               (76)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	FIND           { TokenFind _ }
	FROM           { TokenFrom _ }
	RETURN         { TokenReturn _ }
	WHERE          { TokenWhere _ }
	AS             { TokenAs _ }
	AND            { TokenAnd _ }
	OR             { TokenOr _ }
	STARTS_WITH    { TokenStartsWith _ }
	UPDATE         { TokenUpdate _ }
	CREATE         { TokenCreate _ }
	DELETE         { TokenDelete _ }
	NOT            { TokenNot _ }
	'-'            { TokenDash _ }
	'['            { TokenLBracket _ }
	']'            { TokenRBracket _ }
	'{'            { TokenLBrace _ }
	'}'            { TokenRBrace _ }
	':'            { TokenColon _ }
	'('            { TokenLParen _ }
	')'            { TokenRParen _ }
	','            { TokenComma _ }
	'='            { TokenEquals _ }
	'.'            { TokenDot _ }
	'>'            { TokenGreater _ }
	'<'            { TokenLess _ }
	'<='           { TokenLessEquals _ }
	'>='           { TokenGreaterEquals _ }
	STRING         { TokenString _ $$ }
	IDENT          { TokenIdentifier _ $$ }
	INTEGER        { TokenInteger _ $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseQuery rule  0
	Query           rules 1, 2, 3, 4, 5, 6, 7
	FindClause      rules 8, 9, 10
	FromClause      rule  11
	ReturnClause    rule  12
	WhereClause     rule  13
	CreateClause    rule  14
	UpdateClause    rule  15
	DeleteClause    rule  16
	IdentifierList  rules 17, 18
	IdentifierPattern rules 19, 20, 21, 22, 23
	Labels          rules 24, 25
	RelationshipList rules 26, 27
	RelationshipPattern rules 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45
	PropertyList    rule  46
	Properties      rules 47, 48
	Property        rule  49
	Name            rule  50
	Type            rule  51
	Label           rule  52
	ValueList       rules 53, 54
	Value           rules 55, 56, 57, 58
	Condition       rules 59, 60, 61, 62, 63, 64
	Comparison      rules 65, 66, 67, 68, 69, 70
	ReturnElements  rules 71, 72
	ReturnElement   rules 73, 74, 75, 76

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseQuery -> . Query                        (rule 0)

	FIND           shift, and enter state 3

	Query          goto state 4
	FindClause     goto state 5

State 1

	Query -> . FindClause FromClause ReturnClause       (rule 1)

	FIND           shift, and enter state 3

	FindClause     goto state 2

State 2

	Query -> FindClause . FromClause ReturnClause       (rule 1)

	FROM           shift, and enter state 7

	FromClause     goto state 14

State 3

	FindClause -> FIND . IdentifierList                 (rule 8)
	FindClause -> FIND . IdentifierList RelationshipList    (rule 9)
	FindClause -> FIND . RelationshipList               (rule 10)

	'('            shift, and enter state 12
	IDENT          shift, and enter state 13

	IdentifierList goto state 8
	IdentifierPatterngoto state 9
	RelationshipListgoto state 10
	RelationshipPatterngoto state 11

State 4

	%start_parseQuery -> Query .                        (rule 0)

	%eof           accept


State 5

	Query -> FindClause . FromClause ReturnClause       (rule 1)
	Query -> FindClause . FromClause WhereClause ReturnClause    (rule 2)
	Query -> FindClause . FromClause CreateClause ReturnClause    (rule 3)
	Query -> FindClause . FromClause WhereClause CreateClause ReturnClause    (rule 4)
	Query -> FindClause . FromClause UpdateClause       (rule 5)
	Query -> FindClause . FromClause UpdateClause ReturnClause    (rule 6)
	Query -> FindClause . FromClause DeleteClause ReturnClause    (rule 7)

	FROM           shift, and enter state 7

	FromClause     goto state 6

State 6

	Query -> FindClause FromClause . ReturnClause       (rule 1)
	Query -> FindClause FromClause . WhereClause ReturnClause    (rule 2)
	Query -> FindClause FromClause . CreateClause ReturnClause    (rule 3)
	Query -> FindClause FromClause . WhereClause CreateClause ReturnClause    (rule 4)
	Query -> FindClause FromClause . UpdateClause       (rule 5)
	Query -> FindClause FromClause . UpdateClause ReturnClause    (rule 6)
	Query -> FindClause FromClause . DeleteClause ReturnClause    (rule 7)

	RETURN         shift, and enter state 16
	WHERE          shift, and enter state 29
	UPDATE         shift, and enter state 30
	CREATE         shift, and enter state 31
	DELETE         shift, and enter state 32

	ReturnClause   goto state 15
	WhereClause    goto state 25
	CreateClause   goto state 26
	UpdateClause   goto state 27
	DeleteClause   goto state 28

State 7

	FromClause -> FROM . STRING                         (rule 11)

	STRING         shift, and enter state 24


State 8

	FindClause -> FIND IdentifierList .                 (rule 8)
	FindClause -> FIND IdentifierList . RelationshipList    (rule 9)

	FROM           reduce using rule 8
	'('            shift, and enter state 12
	IDENT          shift, and enter state 13

	IdentifierPatterngoto state 22
	RelationshipListgoto state 23
	RelationshipPatterngoto state 11

State 9

	IdentifierList -> IdentifierPattern .               (rule 17)
	IdentifierList -> IdentifierPattern . ',' IdentifierList    (rule 18)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT ':' Type PropertyList ']' '-' '>' IdentifierPattern    (rule 28)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT ':' Type ']' '-' '>' IdentifierPattern    (rule 29)
	RelationshipPattern -> IdentifierPattern . '-' '[' ':' Type ']' '-' '>' IdentifierPattern    (rule 30)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT PropertyList ']' '-' '>' IdentifierPattern    (rule 31)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT ']' '-' '>' IdentifierPattern    (rule 32)
	RelationshipPattern -> IdentifierPattern . '-' '[' PropertyList ']' '-' '>' IdentifierPattern    (rule 33)
	RelationshipPattern -> IdentifierPattern . '<' '-' '[' IDENT ':' Type PropertyList ']' '-' IdentifierPattern    (rule 34)
	RelationshipPattern -> IdentifierPattern . '<' '-' '[' IDENT ':' Type ']' '-' IdentifierPattern    (rule 35)
	RelationshipPattern -> IdentifierPattern . '<' '-' '[' ':' Type ']' '-' IdentifierPattern    (rule 36)
	RelationshipPattern -> IdentifierPattern . '<' '-' '[' IDENT PropertyList ']' '-' IdentifierPattern    (rule 37)
	RelationshipPattern -> IdentifierPattern . '<' '-' '[' IDENT ']' '-' IdentifierPattern    (rule 38)
	RelationshipPattern -> IdentifierPattern . '<' '-' '[' PropertyList ']' '-' IdentifierPattern    (rule 39)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT ':' Type PropertyList ']' '-' IdentifierPattern    (rule 40)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT ':' Type ']' '-' IdentifierPattern    (rule 41)
	RelationshipPattern -> IdentifierPattern . '-' '[' ':' Type ']' '-' IdentifierPattern    (rule 42)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT PropertyList ']' '-' IdentifierPattern    (rule 43)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT ']' '-' IdentifierPattern    (rule 44)
	RelationshipPattern -> IdentifierPattern . '-' '[' PropertyList ']' '-' IdentifierPattern    (rule 45)

	FROM           reduce using rule 17
	'-'            shift, and enter state 19
	'('            reduce using rule 17
	','            shift, and enter state 20
	'<'            shift, and enter state 21
	IDENT          reduce using rule 17


State 10

	FindClause -> FIND RelationshipList .               (rule 10)

	FROM           reduce using rule 10


State 11

	RelationshipList -> RelationshipPattern .           (rule 26)
	RelationshipList -> RelationshipPattern . ',' RelationshipList    (rule 27)

	FROM           reduce using rule 26
	','            shift, and enter state 18


State 12

	IdentifierPattern -> '(' . IDENT ')'                (rule 20)
	IdentifierPattern -> '(' . IDENT ':' Labels ')'     (rule 21)
	IdentifierPattern -> '(' . IDENT ':' Labels PropertyList ')'    (rule 22)
	IdentifierPattern -> '(' . IDENT PropertyList ')'    (rule 23)

	IDENT          shift, and enter state 17


State 13

	IdentifierPattern -> IDENT .                        (rule 19)

	FROM           reduce using rule 19
	RETURN         reduce using rule 19
	AND            reduce using rule 19
	OR             reduce using rule 19
	CREATE         reduce using rule 19
	'-'            reduce using rule 19
	'('            reduce using rule 19
	')'            reduce using rule 19
	','            reduce using rule 19
	'.'            reduce using rule 19
	'<'            reduce using rule 19
	IDENT          reduce using rule 19
	%eof           reduce using rule 19


State 14

	Query -> FindClause FromClause . ReturnClause       (rule 1)

	RETURN         shift, and enter state 16

	ReturnClause   goto state 15

State 15

	Query -> FindClause FromClause ReturnClause .       (rule 1)

	%eof           reduce using rule 1


State 16

	ReturnClause -> RETURN . ReturnElements             (rule 12)

	'('            shift, and enter state 12
	IDENT          shift, and enter state 63

	IdentifierPatterngoto state 22
	RelationshipPatterngoto state 60
	ReturnElements goto state 61
	ReturnElement  goto state 62

State 17

	IdentifierPattern -> '(' IDENT . ')'                (rule 20)
	IdentifierPattern -> '(' IDENT . ':' Labels ')'     (rule 21)
	IdentifierPattern -> '(' IDENT . ':' Labels PropertyList ')'    (rule 22)
	IdentifierPattern -> '(' IDENT . PropertyList ')'    (rule 23)

	'{'            shift, and enter state 57
	':'            shift, and enter state 58
	')'            shift, and enter state 59

	PropertyList   goto state 56

State 18

	RelationshipList -> RelationshipPattern ',' . RelationshipList    (rule 27)

	'('            shift, and enter state 12
	IDENT          shift, and enter state 13

	IdentifierPatterngoto state 22
	RelationshipListgoto state 55
	RelationshipPatterngoto state 11

State 19

	RelationshipPattern -> IdentifierPattern '-' . '[' IDENT ':' Type PropertyList ']' '-' '>' IdentifierPattern    (rule 28)
	RelationshipPattern -> IdentifierPattern '-' . '[' IDENT ':' Type ']' '-' '>' IdentifierPattern    (rule 29)
	RelationshipPattern -> IdentifierPattern '-' . '[' ':' Type ']' '-' '>' IdentifierPattern    (rule 30)
	RelationshipPattern -> IdentifierPattern '-' . '[' IDENT PropertyList ']' '-' '>' IdentifierPattern    (rule 31)
	RelationshipPattern -> IdentifierPattern '-' . '[' IDENT ']' '-' '>' IdentifierPattern    (rule 32)
	RelationshipPattern -> IdentifierPattern '-' . '[' PropertyList ']' '-' '>' IdentifierPattern    (rule 33)
	RelationshipPattern -> IdentifierPattern '-' . '[' IDENT ':' Type PropertyList ']' '-' IdentifierPattern    (rule 40)
	RelationshipPattern -> IdentifierPattern '-' . '[' IDENT ':' Type ']' '-' IdentifierPattern    (rule 41)
	RelationshipPattern -> IdentifierPattern '-' . '[' ':' Type ']' '-' IdentifierPattern    (rule 42)
	RelationshipPattern -> IdentifierPattern '-' . '[' IDENT PropertyList ']' '-' IdentifierPattern    (rule 43)
	RelationshipPattern -> IdentifierPattern '-' . '[' IDENT ']' '-' IdentifierPattern    (rule 44)
	RelationshipPattern -> IdentifierPattern '-' . '[' PropertyList ']' '-' IdentifierPattern    (rule 45)

	'['            shift, and enter state 54


State 20

	IdentifierList -> IdentifierPattern ',' . IdentifierList    (rule 18)

	'('            shift, and enter state 12
	IDENT          shift, and enter state 13

	IdentifierList goto state 52
	IdentifierPatterngoto state 53

State 21

	RelationshipPattern -> IdentifierPattern '<' . '-' '[' IDENT ':' Type PropertyList ']' '-' IdentifierPattern    (rule 34)
	RelationshipPattern -> IdentifierPattern '<' . '-' '[' IDENT ':' Type ']' '-' IdentifierPattern    (rule 35)
	RelationshipPattern -> IdentifierPattern '<' . '-' '[' ':' Type ']' '-' IdentifierPattern    (rule 36)
	RelationshipPattern -> IdentifierPattern '<' . '-' '[' IDENT PropertyList ']' '-' IdentifierPattern    (rule 37)
	RelationshipPattern -> IdentifierPattern '<' . '-' '[' IDENT ']' '-' IdentifierPattern    (rule 38)
	RelationshipPattern -> IdentifierPattern '<' . '-' '[' PropertyList ']' '-' IdentifierPattern    (rule 39)

	'-'            shift, and enter state 51


State 22

	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT ':' Type PropertyList ']' '-' '>' IdentifierPattern    (rule 28)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT ':' Type ']' '-' '>' IdentifierPattern    (rule 29)
	RelationshipPattern -> IdentifierPattern . '-' '[' ':' Type ']' '-' '>' IdentifierPattern    (rule 30)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT PropertyList ']' '-' '>' IdentifierPattern    (rule 31)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT ']' '-' '>' IdentifierPattern    (rule 32)
	RelationshipPattern -> IdentifierPattern . '-' '[' PropertyList ']' '-' '>' IdentifierPattern    (rule 33)
	RelationshipPattern -> IdentifierPattern . '<' '-' '[' IDENT ':' Type PropertyList ']' '-' IdentifierPattern    (rule 34)
	RelationshipPattern -> IdentifierPattern . '<' '-' '[' IDENT ':' Type ']' '-' IdentifierPattern    (rule 35)
	RelationshipPattern -> IdentifierPattern . '<' '-' '[' ':' Type ']' '-' IdentifierPattern    (rule 36)
	RelationshipPattern -> IdentifierPattern . '<' '-' '[' IDENT PropertyList ']' '-' IdentifierPattern    (rule 37)
	RelationshipPattern -> IdentifierPattern . '<' '-' '[' IDENT ']' '-' IdentifierPattern    (rule 38)
	RelationshipPattern -> IdentifierPattern . '<' '-' '[' PropertyList ']' '-' IdentifierPattern    (rule 39)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT ':' Type PropertyList ']' '-' IdentifierPattern    (rule 40)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT ':' Type ']' '-' IdentifierPattern    (rule 41)
	RelationshipPattern -> IdentifierPattern . '-' '[' ':' Type ']' '-' IdentifierPattern    (rule 42)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT PropertyList ']' '-' IdentifierPattern    (rule 43)
	RelationshipPattern -> IdentifierPattern . '-' '[' IDENT ']' '-' IdentifierPattern    (rule 44)
	RelationshipPattern -> IdentifierPattern . '-' '[' PropertyList ']' '-' IdentifierPattern    (rule 45)

	'-'            shift, and enter state 19
	'<'            shift, and enter state 21


State 23

	FindClause -> FIND IdentifierList RelationshipList .    (rule 9)

	FROM           reduce using rule 9


State 24
